--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
 
     <style>
@@ -59,6 +60,11 @@
 
         .plusForm {
             padding: 6px 12px !important;
+        }
+
+        .btn-con {
+            margin-top: 6.5px !important;
+            padding: 0;
         }
     </style>
 </head>
@@ -153,13 +159,14 @@
                 <div class="mb-2 row">
                     <label for="lastPosInput1" class="form-label col-sm-1 plabel">Last Position</label>
                     <div class="col-sm-2">
-                        <input type="text" class="form-control" id="lastPosInput1" value="Mualim III" placeholder="Last Position" required>
+                        <input type="text" class="form-control" id="lastPosInput1" value="Mualim III"
+                            placeholder="Last Position" required>
                     </div>
                 </div>
             </div>
             <!-- Harus Ditambah disini jika button addInput ditekan -->
         </div>
-        <div id="alert" style="padding: 12px 0px; margin: 0; display: none;">   
+        <div id="alert" style="padding: 12px 0px; margin: 0; display: none;">
             <h6 style="color: red; padding: 0; margin: 0;">You can only enter a variety of data as input up to 5 data.
             </h6>
         </div>
@@ -192,11 +199,13 @@
                     <th>Full Name</th>
                     <th>Gender</th>
                     <th>Age</th>
-                    <th>Education Level</th>
+                    <th>Education</th>
+                    <th>Phone Number</th>
                     <th>Status</th>
                     <th>Experience</th>
                     <th>Certificate</th>
                     <th>Last Position</th>
+                    <th>Action</th>
                 </tr>
             </thead>
             <tbody id="candidateRecommendationTable">
@@ -210,16 +219,19 @@
             <h5>Recommended Crew's</h5>
         </div>
         <div style="text-align: center;">
-            <p>We're sorry that we couldn't find the corresponding data in the current database, please correct or update your database, Thank you.</p>
+            <p>We're sorry that we couldn't find the corresponding data in the current database, please correct or
+                update your database, Thank you.</p>
         </div>
     </div>
 
     <footer style="bottom: 0; left: 0; width: 100%; margin-top: 80px;
         background-color: rgb(129, 129, 129); color: white; text-align: right;">
         <div style="display: flex; justify-content: flex-end; align-items: center; margin: 0; padding: 8px 10px;">
-            <b><p style="margin: 0; font-size: 12px;">
-                Present by HRIS Intern
-            </p></b>
+            <b>
+                <p style="margin: 0; font-size: 12px;">
+                    Present by HRIS Intern
+                </p>
+            </b>
         </div>
     </footer>
 
@@ -286,7 +298,7 @@
                 .then(response => response.json())
                 .then(data => {
                     document.getElementById('loading').style.display = 'none'
-                    
+
                     if (data.length > 1) {
                         document.getElementById("results2").style.display = "none"
                         document.getElementById("results").style.display = "block"
@@ -304,15 +316,30 @@
                                     <td style="text-align: center;">${candidate["GENDER"]}</td>
                                     <td style="text-align: center;">${candidate["AGE"]}</td>
                                     <td style="text-align: center;">${candidate["EDU_LEVEL"]}</td>
+                                    <td style="text-align: center;">${candidate["PHONE_NUMBER_2"]}</td>
                                     <td style="text-align: center;">${candidate["STATUS"]}</td>
                                     <td style="text-align: center;">${candidate["EXPERIENCE"]}</td>
                                     <td style="text-align: center;">${candidate["CERTIFICATE"]}</td>
                                     <td>${candidate["LAST_POSITION"]}</td>
+                                    <td style="text-align: center;">
+                                        <span class="d-inline-block" tabindex="0" data-bs-toggle="popover" 
+                                            data-bs-trigger="hover" data-bs-content="Contact Now">
+                                            <button class="btn btn-primary btn-sm btn-con" type="button">
+                                                <a href="https://wa.me/${candidate["PHONE_NUMBER"]}" target="_blank" 
+                                                    class="btn btn-primary btn-sm" type="button">
+                                                        <i class="fa fa-phone"></i>
+                                                </a>
+                                            </button>
+                                        </span>
+                                    </td>
                                 </tr>`;
                         }
                         tableBody.innerHTML = rowHTML;
-                        $('#tableMains').DataTable();
 
+                        $('[data-bs-toggle="popover"]').popover();
+                        $('#tableMains').DataTable({
+                            responsive: true
+                        });
                     } else {
                         document.getElementById("results").style.display = "none"
                         document.getElementById("results2").style.display = "block"
@@ -408,6 +435,7 @@
             }
         });
     </script>
+
 </body>
 
 </html>
